<resources>
    <string name="app_name">PoweraMPD</string>

    <string name="mdns_type">_mpd</string>
    <string name="mdns_description">Powerampd Music Player Daemon</string>

    <string name="notification_title_running">PoweraMPD running</string>
    <string name="notification_text_running_ip" formatted="false">Listening on %1$s:%2$d</string>
    <string name="notification_text_running_zeroconf" formatted="false">Listening on %1$s (%2$s:%3$d)</string>

    <string name="toast_error_bind">PoweraMPD: error binding to address</string>
    <string name="toast_error_client">PoweraMPD: error connecting to client</string>
    <string name="toast_error_password_length">Password must be at least one character</string>
    <string name="toast_error_mdns_name_length">Name must be at least one character</string>
    <string name="toast_error_timeout_invalid">Timeout must be zero or a positive number</string>
    <string name="toast_error_cancel">Edit cancelled</string>

    <string name="title_settings">Settings</string>
    <string name="title_auth">Authentication/authorization</string>
    <string name="title_auth_edit">Edit password</string>
    <string name="title_server_settings">Server settings</string>
    <string name="title_mdns">Service Discovery</string>
    <string name="title_behaviour">Behaviour</string>

    <string name="title_auth_entries">Passwords</string>
    <string name="summary_auth_entries">Edit password entries</string>

    <string name="title_default_permissions">Default permissions</string>
    <string name="summary_default_permissions">Permissions for unauthenticated clients</string>

    <string name="pref_enabled">Enabled</string>
    <string name="pref_enabled_default">true</string>
    <string name="pref_enabled_desc">Start server when connected to Wi-Fi</string>

    <string name="pref_mdns_name">mDNS Service Name</string>
    <string name="pref_mdns_name_default">MPD Server</string>

    <string name="pref_mdns_hostname">mDNS Hostname</string>
    <string name="pref_mdns_hostname_default">MY-DEVICE</string>

    <string name="pref_port">Port</string>
    <string name="pref_port_default">6600</string>

    <string name="pref_timeout">Connection timeout</string>
    <string name="pref_timeout_default">60</string>
    <string name="pref_timeout_desc">%1$d seconds</string>

    <string name="pref_auth_enabled">Require password</string>
    <string name="pref_auth_enabled_default">false</string>
    <string name="pref_auth_enabled_desc">Enable server authentication</string>

    <string name="pref_password">Password</string>
    <string name="pref_password_default">&lt;password&gt;</string>

    <string name="pref_permission_read">Read</string>
    <string name="pref_permission_read_default">false</string>
    <string name="pref_permission_read_desc">Allow reading the database, displaying the current playlist and status</string>
    <string name="pref_permission_add">Add</string>
    <string name="pref_permission_add_default">false</string>
    <string name="pref_permission_add_desc">Allow adding songs and loading playlists</string>
    <string name="pref_permission_control">Control</string>
    <string name="pref_permission_control_default">false</string>
    <string name="pref_permission_control_desc">Allow player and playlist manipulation</string>
    <string name="pref_permission_admin">Admin</string>
    <string name="pref_permission_admin_default">false</string>
    <string name="pref_permission_admin_desc">Allow all actions</string>

    <string name="pref_shuffle">Default shuffle mode</string>
    <string name="pref_shuffle_default">SHUFFLE_SONGS</string>
    <string name="pref_shuffle_desc">Poweramp shuffle mode to use when enabling shuffle</string>

    <string name="pref_repeat">Default repeat mode</string>
    <string name="pref_repeat_default">REPEAT_ON</string>
    <string name="pref_repeat_desc">Poweramp repeat mode to use when enabling repeat</string>

    <string name="action_add">Add</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_delete">Delete</string>
    <string name="action_add_password">Add entry</string>

    <!-- Protocol strings -->
    <string name="proto_handshake">MPD 0.19.0</string>
    <string name="proto_ok">OK</string>
    <string name="proto_list_ok">list_OK</string>
    <string name="proto_ack">ACK</string>

    <string name="proto_crossfade">Cross-fade</string>
    <string name="proto_consume">Consume mode</string>
    <string name="proto_replay_gain">Replay Gain</string>
    <string name="proto_single">Single mode</string>
    <string name="proto_mount">Mount management</string>
    <string name="proto_output">Output management</string>

    <string name="proto_error_unsupported">%s is not supported</string>
    <string name="proto_error_currently_unsupported">%s is currently not supported</string>

    <string name="proto_error_command_implemented">command not implemented</string>
    <string name="proto_error_command_none">No command given</string>
    <string name="proto_error_command_unknown" formatted="false">unknown command "%1$s"</string>
    <string name="proto_error_password">incorrect password</string>
    <string name="proto_error_arg_boolean" formatted="false">Boolean (0/1) expected: %1$s</string>
    <string name="proto_error_volume_invalid">Invalid volume value</string>
    <string name="proto_error_volume_integer" formatted="false">Integer expected: %1$s</string>
    <string name="proto_status_play">play</string>
    <string name="proto_status_pause">pause</string>
    <string name="proto_status_stop">stop</string>
</resources>
