<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/title_auth">

        <CheckBoxPreference
            android:key="pref_auth_enabled"
            android:title="@string/pref_auth_enabled"
            android:summary="@string/pref_auth_enabled_desc"
            android:defaultValue="false" />

        <PreferenceScreen
            android:key="pref_permission_default"
            android:title="@string/pref_permission_default">

            <CheckBoxPreference
                android:key="pref_permission_default_read"
                android:title="@string/pref_permission_read"
                android:summary="@string/pref_permission_read_desc"
                android:defaultValue="false" />

            <CheckBoxPreference
                android:key="pref_permission_default_add"
                android:title="@string/pref_permission_add"
                android:summary="@string/pref_permission_add_desc"
                android:defaultValue="false" />

            <CheckBoxPreference
                android:key="pref_permission_default_control"
                android:title="@string/pref_permission_control"
                android:summary="@string/pref_permission_control_desc"
                android:defaultValue="false" />

            <CheckBoxPreference
                android:key="pref_permission_default_admin"
                android:title="@string/pref_permission_admin"
                android:summary="@string/pref_permission_admin_desc"
                android:defaultValue="false" />

        </PreferenceScreen>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_auth_entries"
        android:title="@string/title_auth_entries" />

</PreferenceScreen>