<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/title_settings">

        <CheckBoxPreference
            android:key="pref_enabled"
            android:title="@string/pref_enabled"
            android:summary="@string/pref_enabled_desc"
            android:defaultValue="false" />

        <EditTextPreference
            android:key="pref_mdns_name"
            android:title="@string/pref_mdns_name"
            android:defaultValue="@string/pref_mdns_name_default"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:maxLines="1" />

        <EditTextPreference
            android:key="pref_port"
            android:title="@string/pref_port"
            android:defaultValue="@string/pref_port_default"
            android:selectAllOnFocus="true"
            android:inputType="number"
            android:singleLine="true"
            android:maxLines="1" />

        <Preference
            android:key="pref_sub_auth"
            android:title="@string/title_auth" />

    </PreferenceCategory>
</PreferenceScreen>